# andino_integration_tests

./: CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_docker_image.yml  clean.yml  process_sim_job_results.yml  remove_docker_images.yml  remove_robomaker_simulations.yml  trigger_robomaker_sim.yml  workspace.yml
andino_tests/: LICENSE  NOTICE  README.md  package.xml  pytest.ini  setup.cfg  setup.py
andino_tests/config/: test_suite.json
andino_tests/scripts/: test_entrypoint.sh
andino_tests/test/: test_copyright.py  test_flake8.py  test_pep257.py
andino_tests/test/andino_tests/: test_robot_moves.py  test_sensor_verification.py  test_set_initial_pose.py  test_set_move_to_pose.py
doc/: pipeline_ci.drawio
docker/: Dockerfile  README.md  build_ci.sh  build_dev.sh  remove_image_ci.sh  requirements.txt  run_ci.sh  run_dev.sh
ekumen_cloud_robotics_ci/: README.md  requirements.txt
ekumen_cloud_robotics_ci/config/: test-suite.json
ekumen_cloud_robotics_ci/scripts/: delete_simulation_job.py  process_simulation_results.py  trigger_robomaker_sim.py
